# wavlib

./: ChangeLog  History  Makefile.am  Makefile.in  README  acinclude.m4  agen.1  agen.c  ameter.1  ameter.c  aproc.1  aproc.c  configure  configure.in  infowav.1  infowav.c  mptrim.1  mptrim.c  nmix.1  nmix.c  recwav.1  recwav.c  trim.1  trim.c  wavgen.1  wavgen.c  wavlib.c  wavlib.h  wavlib.spec.in
doc/: API.txt  ListChunk.txt  Makefile.am  Makefile.in
